# binance-downloader

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
binance_downloader/: __init__.py  __main__.py  api.py  binance_utils.py  cli.py  db.py  util.py  utils.py
binance_downloader.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
