[tool.poetry]
name = "binance-downloader"
version = "0.2.0"
description = "CLI to download k-line (candlestick/OHLC) data from Binance API"
authors = ["Anson VanDoren <anson.vandoren@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/anson-vandoren/binance-downloader.git"
keywords = [
    "Binance",
    "Cryptocurrency",
    "Finance",
    "Technical Analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.5"
pandas = "^0.23.4"
requests = "^2.21"
tqdm = "^4.28"
logbook = "^1.4"
tables = "^3.4"
dateparser = "^0.7.0"

[tool.poetry.dev-dependencies]
pylint = "^2.2"

[tool.poetry.scripts]
kline-binance = "binance_downloader.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

