[tool.poetry]
name = "binance-downloader"
version = "0.2.5"
description = "CLI to download k-line (candlestick/OHLC) data from Binance API"
authors = ["Anson VanDoren <anson.vandoren@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/anson-vandoren/binance-downloader.git"
keywords = [
    "Binance",
    "Cryptocurrency",
    "Finance",
    "Technical Analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.6.1"
pandas = "~=1.1.0"
requests = ">=2.21"
tqdm = ">=4"
logbook = ">=1"
tables = ">=3"
dateparser = ">=0.7"

[tool.poetry.dev-dependencies]
pylint = "^2.2"

[tool.poetry.scripts]
kline-binance = "binance_downloader.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

